<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
        <item
            android:id="@+id/menu_refresh"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_refresh_black_18dp"
            android:title="@string/menu_refresh"/>

        <item android:id="@+id/action_search"
            android:title="@string/action_search"
            android:icon="@drawable/ic_search_black_18dp"
            android:orderInCategory="100"
            app:showAsAction="always" />

        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings_black_18dp"
            android:orderInCategory="100"
            app:showAsAction="never" />

        <item android:id="@+id/action_downloads"
                android:title="@string/action_download"
                android:icon="@drawable/ic_file_download_black_18dp"
                android:orderInCategory="100"
                app:showAsAction="never" />

        <item android:id="@+id/action_upload"
            android:title="@string/action_upload"
            android:icon="@drawable/ic_file_upload_black_18dp"
            android:orderInCategory="100"
            app:showAsAction="never" />

        <item android:id="@+id/action_sync"
            android:title="@string/title_sync"
            android:icon="@drawable/ic_sync_black_18dp"
            android:orderInCategory="100"
            app:showAsAction="never" />

        <item android:id="@+id/action_about"
            android:title="@string/title_about"
            android:icon="@drawable/ic_help_black_18dp"
            android:orderInCategory="100"
            app:showAsAction="never" />

</menu>
