<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="200dip"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.alphamedia.rutilahu.LoginActivity"
    android:elevation="8dp"
    android:background="@drawable/above_shadow"
    android:theme="@style/Animation.AppCompat.Dialog">

        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width='fill_parent'
            android:layout_height='wrap_content'
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:singleLine="true"
            android:hint="@string/username" />
            <requestFocus />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width='match_parent'
            android:layout_height='wrap_content'
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/password"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="match_parent" >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_login"
                    android:id="@+id/btn_login"
                    android:onClick="btnLogin" />

                <Button
                    android:text="@string/button_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btn_cancel"
                    android:onClick="btnCancel" />

            </LinearLayout>


</LinearLayout>